@@ -17,6 +17,7 @@
 package org.apache.lucene.search;
 
 import java.io.IOException;
+import org.apache.lucene.index.DocValuesSkipper;
 import org.apache.lucene.index.StoredFields;
 
 /**
@@ -82,6 +83,22 @@ public interface LeafCollector {
    * searches by an order of magnitude or more.
    */
   void collect(int doc) throws IOException;
+
+  /**
+   * Collect a range of doc IDs, between {@code min} inclusive and {@code max} exclusive. {@code
+   * max} is guaranteed to be greater than {@code min}.
+   *
+   * <p>Extending this method is typically useful to take advantage of pre-aggregated data exposed
+   * in a {@link DocValuesSkipper}.
+   *
+   * <p>The default implementation calls {@link #collect(DocIdStream)} on a {@link DocIdStream} that
+   * matches the given range.
+   *
+   * @see #collect(int)
+   */
+  default void collectRange(int min, int max) throws IOException {
+    collect(new RangeDocIdStream(min, max));
+  }
 
   /**
    * Bulk-collect doc IDs.
